# polymath

./: .gitignore  README.md  pilot.jsonl  pyproject.toml  run_daily.sh
docs/superpowers/plans/: 2026-06-16-news-directional-pilot.md  2026-06-16-polymath-core-scanner.md
docs/superpowers/specs/: 2026-06-16-news-signal-directional-pilot-design.md  2026-06-16-polymath-arbitrage-scanner-design.md
src/polymath/: cli.py  config.py  ledger.py  model.py  paper.py  pricing.py  report.py  scanner.py
src/polymath/clients/: __init__.py  clob.py  gamma.py
src/polymath/detectors/: pure_arb.py
src/polymath/signals/: analyze.py  cli.py  directional.py  estimate.py  nearterm.py  research.py  resolution.py  select.py  settle.py
tests/: test_cli.py  test_clob_client.py  test_config.py  test_gamma_client.py  test_ledger.py  test_model.py  test_paper.py  test_pricing.py  test_pure_arb.py  test_report.py  test_scanner.py
tests/fixtures/: gamma_markets_page1.json
tests/signals/: __init__.py  test_analyze.py  test_claude_cli_researcher.py  test_directional.py  test_estimate.py  test_market_pricing_fields.py  test_nearterm.py  test_resolution.py  test_select.py  test_settle.py  test_signals_cli.py  test_signals_config.py  test_stub_researcher.py
