[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymath"
version = "0.1.0"
description = "Depth-aware Polymarket arbitrage scanner with paper-trading harness"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
polymath = "polymath.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/polymath"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
